// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch category for the first time 1`] = `
Array [
  Array [
    Object {
      "endpoint": "categories",
      "params": Object {
        "slug": "nature",
      },
    },
  ],
  Array [
    Object {
      "endpoint": "posts",
      "params": Object {
        "_embed": true,
        "categories": 7,
        "page": 1,
        "search": undefined,
      },
    },
  ],
]
`;

exports[`fetch category for the first time 2`] = `
Object {
  "/2016/banff-national-park/": Object {
    "id": 36,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/discovering-iceland/": Object {
    "id": 26,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/iceland/": Object {
    "id": 1,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/kebumen/": Object {
    "id": 42,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/lower-antelope-canyon/": Object {
    "id": 54,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/machu-picchu/": Object {
    "id": 30,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/shinjuku-gyoen-national-garden/": Object {
    "id": 57,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/somewhere-in-romania/": Object {
    "id": 12,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/switzerlands-mountains/": Object {
    "id": 23,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/the-al-hajar-mountains/": Object {
    "id": 33,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/author/davidarenas/": Object {
    "id": 4,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/author/luisherranz/": Object {
    "id": 1,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/author/mario/": Object {
    "id": 2,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/author/orballo/": Object {
    "id": 3,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/category/architecture/": Object {
    "id": 5,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/cities/": Object {
    "id": 4,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/culture/": Object {
    "id": 6,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/inspiring-stories/": Object {
    "id": 57,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/lifestyle/": Object {
    "id": 59,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/nature/": Object {
    "id": 7,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [
      Array [
        Object {
          "id": 57,
          "link": "https://test.frontity.io/2016/shinjuku-gyoen-national-garden/",
          "type": "post",
        },
        Object {
          "id": 54,
          "link": "https://test.frontity.io/2016/lower-antelope-canyon/",
          "type": "post",
        },
        Object {
          "id": 42,
          "link": "https://test.frontity.io/2016/kebumen/",
          "type": "post",
        },
        Object {
          "id": 36,
          "link": "https://test.frontity.io/2016/banff-national-park/",
          "type": "post",
        },
        Object {
          "id": 33,
          "link": "https://test.frontity.io/2016/the-al-hajar-mountains/",
          "type": "post",
        },
        Object {
          "id": 30,
          "link": "https://test.frontity.io/2016/machu-picchu/",
          "type": "post",
        },
        Object {
          "id": 26,
          "link": "https://test.frontity.io/2016/discovering-iceland/",
          "type": "post",
        },
        Object {
          "id": 23,
          "link": "https://test.frontity.io/2016/switzerlands-mountains/",
          "type": "post",
        },
        Object {
          "id": 12,
          "link": "https://test.frontity.io/2016/somewhere-in-romania/",
          "type": "post",
        },
        Object {
          "id": 1,
          "link": "https://test.frontity.io/2016/iceland/",
          "type": "post",
        },
      ],
    ],
    "taxonomy": "category",
    "total": 10,
    "totalPages": 1,
  },
  "/category/news/": Object {
    "id": 56,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/photography/": Object {
    "id": 3,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/travel/": Object {
    "id": 8,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/voices-and-views/": Object {
    "id": 58,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/tag/al-hajar-mountains/": Object {
    "id": 34,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/alps/": Object {
    "id": 41,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/animals/": Object {
    "id": 40,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/antelope-canyon/": Object {
    "id": 18,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/arizona/": Object {
    "id": 19,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/canada/": Object {
    "id": 32,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/culture/": Object {
    "id": 30,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/forests/": Object {
    "id": 50,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/iceland/": Object {
    "id": 9,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/inca/": Object {
    "id": 38,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/indonesia/": Object {
    "id": 29,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/island/": Object {
    "id": 23,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/japan/": Object {
    "id": 15,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/java/": Object {
    "id": 28,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/landscape/": Object {
    "id": 47,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/machu-picchu/": Object {
    "id": 37,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/mountains/": Object {
    "id": 42,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/national-garden/": Object {
    "id": 16,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/national-park/": Object {
    "id": 31,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/nature/": Object {
    "id": 13,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/oman/": Object {
    "id": 35,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/peru/": Object {
    "id": 39,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/rocky-mountains/": Object {
    "id": 33,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/romania/": Object {
    "id": 49,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/switzerland/": Object {
    "id": 43,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/the-carpathian-mountains/": Object {
    "id": 48,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/tokyo/": Object {
    "id": 14,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/united-arab-emirates/": Object {
    "id": 36,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
}
`;

exports[`fetch try to get a category that doesn't exist 1`] = `
Array [
  Array [
    Object {
      "endpoint": "categories",
      "params": Object {
        "slug": "not-a-category",
      },
    },
  ],
]
`;

exports[`fetch try to get a category that doesn't exist 2`] = `
Object {
  "/category/not-a-category/": Object {
    "is404": true,
    "isFetching": false,
  },
}
`;
